<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="ro.ase.csie.degree.settings.SettingsActivity">

    <GridLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:columnCount="4">

        <ImageButton
            android:id="@+id/settings_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_row="0"
            android:layout_column="0"
            android:layout_columnSpan="1"
            android:background="@color/rally_grey"
            android:contentDescription="@string/settings_back"
            android:padding="8sp"
            android:src="@drawable/abc_vector_test" />

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_row="1"
            android:layout_column="0"
            android:layout_columnSpan="1"
            android:layout_margin="16sp"
            app:cardBackgroundColor="@color/rally_dark_green"
            app:cardCornerRadius="16sp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:padding="16sp">

                <TextView
                    android:id="@+id/account_name"
                    style="@style/settings_card_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/placeholder_name" />

                <TextView
                    android:id="@+id/account_email"
                    style="@style/settings_card_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/placeholder_email" />

                <TextView
                    android:id="@+id/account_currency"
                    style="@style/settings_card_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/placeholder_currency" />

                <TextView
                    android:id="@+id/account_streak"
                    style="@style/settings_card_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/placeholder_streak"
                />
            </LinearLayout>
        </androidx.cardview.widget.CardView>

        <Button
            android:id="@+id/settings_balances"
            style="@style/settings_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_row="2"
            android:layout_column="0"
            android:layout_columnSpan="1"
            android:gravity="start|center"
            android:text="@string/settings_balances"
            android:textAlignment="textStart" />

        <Button
            android:id="@+id/settings_currency"
            style="@style/settings_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_row="3"
            android:layout_column="0"
            android:gravity="start|center"
            android:text="@string/settings_currency"
            android:textAlignment="textStart" />

        <Button
            android:id="@+id/settings_converter"
            style="@style/settings_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_row="4"
            android:layout_column="0"
            android:gravity="start|center"
            android:text="@string/settings_converter"
            android:textAlignment="textStart" />

        <Button
            android:id="@+id/settings_categories"
            style="@style/settings_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_row="5"
            android:layout_column="0"
            android:gravity="start|center"
            android:text="@string/settings_customize_categories"
            android:textAlignment="textStart" />

        <Button
            android:id="@+id/settings_templates"
            style="@style/settings_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_row="6"
            android:layout_column="0"
            android:gravity="start|center"
            android:text="@string/settings_templates"
            android:textAlignment="textStart" />

        <Button
            android:id="@+id/settings_theme"
            style="@style/settings_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_row="7"
            android:layout_column="0"
            android:gravity="start|center"
            android:text="@string/settings_theme"
            android:textAlignment="textStart" />

        <Button
            android:id="@+id/settings_language"
            style="@style/settings_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_row="8"
            android:layout_column="0"
            android:gravity="start|center"
            android:text="@string/settings_language"
            android:textAlignment="textStart" />


        <Button
            android:id="@+id/settings_reminders"
            style="@style/settings_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_row="9"
            android:layout_column="0"
            android:gravity="start|center"
            android:text="@string/settings_reminders"
            android:textAlignment="textStart" />

        <Button
            android:id="@+id/settings_contact"
            style="@style/settings_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_row="10"
            android:layout_column="0"
            android:gravity="start|center"
            android:text="@string/settings_contact"
            android:textAlignment="textStart" />


        <Button
            android:id="@+id/settings_sign_out"
            style="@style/settings_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_row="11"
            android:layout_column="0"
            android:gravity="start|center"
            android:text="@string/settings_sign_out"
            android:textAlignment="textStart" />
    </GridLayout>
</ScrollView>
