<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".settings.target.TargetActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16sp"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:orientation="vertical"
            android:padding="16sp">

            <TextView
                android:id="@+id/target_initial_balance"
                style="@style/target_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/target_initial_balance" />

            <TextView
                android:id="@+id/target_current_balance"
                style="@style/target_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/target_current_balance" />


            <TextView
                android:id="@+id/target_target_spendings"
                style="@style/target_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/target_target_spendings" />

            <TextView
                android:id="@+id/target_current_spendings"
                style="@style/target_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/target_current_spendings" />
        </LinearLayout>

        <FrameLayout
            android:id="@+id/target_frame_chart_actual"
            android:layout_width="300sp"
            android:layout_height="300sp"
            android:layout_gravity="center"
            android:layout_margin="32sp"
            android:layout_weight="1"
            android:padding="16sp" />

        <Button
            android:id="@+id/target_change_target"
            style="@style/settings_button"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="end"
            android:layout_marginBottom="32sp"
            android:text="@string/change_target" />
    </LinearLayout>


</ScrollView>