<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="50sp"
    tools:context=".settings.balances.AddBalanceActivity">


    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/text_box">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/add_balance_name"
            style="@style/text_box"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/add_balance_name" />


    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        style="@style/text_box"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/add_balance_available_amount"
            style="@style/text_box"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/add_balance_amount"
            android:inputType="numberDecimal" />


    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/add_balance_save"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/save" />
</LinearLayout>